<resources>
    <string name="app_name">Piyoda</string>
    <string name="maslahat1_0">Maslahatlar</string>
    <string name="maslahat1_1_0">YURISHNI SALOMATLIKGA 10 FOYDASI</string>
    <string name="maslahat1_1">"1.Kayfiyatni ko'taradi"</string>
    <string name="maslahat1_2">"Sizning kayfiyatingizni yaxshilash uchun bir necha kvadrat qora shokolad va bir chashka qahva kafolatlanadi. Ammo yurish bitta muhim farq bilan bir xil afzalliklarga ega: u kaloriyalarni qo'shmaydi, aksincha, ularni yoqadi. Tadqiqotlar shuni ko'rsatadiki, muntazam yurish insonning asab tizimiga foydali ta'sir ko'rsatadi, g'azabni bosadi va dushmanlik darajasini pasaytiradi. Agar siz ko'katlarga to'la park yoki o'rmonda sayr qilsangiz va quyosh sizga o'z nurlarini bersangiz, ta'sir kuchliroq bo'ladi."</string>
    <string name="maslahat1_3">"2.Surunkali kasalliklar xavfini kamaytirish"</string>
    <string name="maslahat1_4">"Amerika Diabet Assotsiatsiyasining ta'kidlashicha, yurish qondagi qand miqdorini va diabet rivojlanish xavfini kamaytiradi. Boulderdagi Kolorado universiteti va Tennessi universiteti tadqiqotchilari muntazam yurish qon bosimini va insult ehtimolini 20–40% ga kamaytirishi haqida hisobot berishadi. New England Journal of Medicine jurnalida chop etilgan yurishning foydalari bo'yicha eng ko'p tilga olingan tadqiqotlardan biri shuni ko'rsatadiki, jismoniy mashqlar bo'yicha umumiy qabul qilingan tavsiyalarni bajarish uchun etarlicha yuradigan odamlarda yurak-qon tomir kasalliklarini rivojlanish xavfi 30% ga kamayadi.."</string>
    <string name="maslahat1_5">"3.Varikoz tomirlarining oldini olish"</string>
    <string name="maslahat1_6">"Yoshi ulg'aygan sari varikoz tomirlarini rivojlanish ehtimoli ortadi. Ammo yurish - oyoqlarda bo'rtib chiqqan chiziqlar paydo bo'lishining oldini olish yoki kasallikning boshlanishini kechiktirishning tasdiqlangan usuli. Agar siz allaqachon varikoz tomirlaridan aziyat chekayotgan bo'lsangiz, har kuni piyoda yurish oyoqlardagi noqulaylikdan xalos bo'lishga va shishishni kamaytirishga yordam beradi>>, deydi doktor. Tibbiyot fanlari Luis Navarro."</string>
    <string name="maslahat1_7">"4.Qomatni chiroyli qiladi"</string>
    <string name="maslahat1_8">"Shaxsiy fitnes murabbiyi Ariel Yasevolining aytishicha, yurish tana tuzilishini yaxshi tomonga o'zgartirish va ozishning eng samarali usullaridan biri hisoblanadi: “Kundalik yurish metabolizmni oshiradi, kuyish. qo'shimcha kaloriyalar va mushak massasini qurish. Bunday holda, siz yugurish yo'lakchasida aylanalarni shamollashingiz shart emas. Mening mijozlarimdan biri ishdan qaytib, 1,5 km dan ko'p bo'lmagan masofani bosib o'tib, tanadagi yog 'kontsentratsiyasini 2% ga kamaytirdi. Kilo berishni xohlaysiz. Tezroq? Intervalli mashg'ulotlarni sinab ko'ring! “Intervalli yurish mashqlar tugaganidan keyin ham tanangiz kaloriyalarni yoqishiga olib keladi. Buning uchun isinishga 3 daqiqa ajrating, so'ngra bir daqiqa tez yurish va 1 daqiqa juda tez (imkoniyatingiz chegarasida) bilan almashtiring. Shundan so'ng, dam olish uchun 2 daqiqa vaqt ajrating, yurishni davom ettiring va keyin yana takrorlang. Intervalli mashg'ulotning ideal uzunligi 25 daqiqani tashkil qiladi, - deydi 1 yurish bo'yicha murabbiy Mishel Staten."</string>
    <string name="maslahat1_9">"5.Boshqa ishlar uchun ko'proq vaqt va kuch"</string>
    <string name="maslahat1_10">"Muntazam sport yuki, u yurishmi yoki boshqa narsami, odamga odatdagi ishlarni tezroq bajarishga imkon beradi, chunki u ko'proq kuch va energiya beradi. Ishonchim komilki, yurish odat bo'lib, o'z oldingizga qo'ygan boshqa maqsadlarga erishishingizga yordam beradi, deydi Yurish bo'yicha shaxsiy murabbiy Kim Evans."</string>
    <string name="maslahat1_11">"6.Bo'g'inlardagi og'riqlarni bartaraf etadi"</string>
    <string name="maslahat1_12">"Yurish paytida tananing qon aylanishi yaxshilanadi, bo'g'imlarning harakatchanligi oshadi, ularni o'rab turgan mushaklar kuchayadi. American Journal of Preventive Medicine jurnalida chop etilgan 2019 yilgi tadqiqot shuni ko'rsatadiki, kuniga 10 daqiqa yurish (bu haftada bir soatni tashkil qiladi) yordam beradi. keksa yoshdagi artrit og'rig'ining oldini olish. Tadqiqot 49 yoshdan oshgan 1564 kishi ishtirokida o‘tkazildi."</string>
    <string name="maslahat1_13">"7.Onkologik kasaliklar xavfini kamaytiradi"</string>
    <string name="maslahat1_14">"Faol mashq qiladigan adolatli jinsiy aloqa vakillari ko'krak saratoni bilan kasallanish ehtimoli 30–40% kamroq. Bundan tashqari, tez yuradigan yoki boshqa turdagi jismoniy faoliyat bilan muntazam shug'ullanadigan ayollar va erkaklarda yo'g'on ichak saratoni rivojlanish ehtimoli kamroq."</string>
    <string name="maslahat1_15">"8.Immunitetni mustahkamlaydi"</string>
    <string name="maslahat1_16">"Muntazam yurish nafaqat mavsumiy kasalliklar paytida immunitetni mustahkamlash uchun yaxshi yordam beradi. 2017 yilgi tadqiqot bu yordam berishini ko'rsatdi. surunkali obstruktiv o'pka kasalligi (KOAH) bilan og'rigan bemorlarda ham respirator kasalliklardan qoching va o'limga olib keladigan oqibatlar ehtimolini kamaytiring. KOAH bilan og'rigan bemorlar ko'pincha ortiqcha vaznga ega, shuning uchun ular uzoq vaqt sport bilan shug'ullana olmaydilar va jismoniy mashqlar paytida nafas olishda qiyinchiliklarga duch kelishadi. Ammo yurish kasalliklarning alomatlarini yaxshilaydi, shuningdek, yurak-qon tomir kasalliklari va metabolik sindrom xavfini kamaytiradi."</string>
    <string name="maslahat1_17">"9.Uyqu sifatini yaxshilaydi"</string>
    <string name="maslahat1_18">"Muntazam ravishda jismoniy mashqlar bilan shug'ullanadiganlar jismoniy faollik uyquga ketish va uyqu davomiyligiga qanday ta'sir qilishini bilishadi. Sportchilar boshi yostiqqa tegishi bilanoq uxlab qolishadi va qattiqroq uxlashadi. 2019 yilda adolatli jinsiy aloqa o'rtasida o'tkazilgan tadqiqot shuni ko'rsatdiki, o'rtacha jismoniy mashqlar bilan shug'ullanadigan postmenopozal ayollar o'tirgan turmush tarzini olib boradiganlarga qaraganda tunda yaxshiroq uxlashadi. Shu bilan birga, yurish og'riq va stress darajasini kamaytirishi mumkin."</string>
    <string name="maslahat1_19">"10.Umrni uzaytiradi"</string>
    <string name="maslahat1_20">"Ko'k zonadagi odamlar 100 yil chegarasini qanday bosib o'tishlari haqida hech o'ylab ko'rganmisiz? Tadqiqotchilarning fikricha, ularning uzoq faol hayotining asosiy sirlaridan biri ochiq havoda sayr qilishdir. Journal of the American Geriatrics Society tomonidan o'tkazilgan tadqiqot shuni ko'rsatdiki, 70–90 yoshlardagi jismoniy faol va tez-tez yuradigan odamlar uyda o'tirganlarga qaraganda ko'proq umr ko'rishadi. Shu bilan birga, jismoniy faollik ularga nafaqat sportdan barcha bonuslarni olish, balki qarindoshlar va do'stlar bilan ijtimoiy aloqalarni saqlab qolish imkonini beradi, bu esa balog'at yoshida ayniqsa muhim bo'lgan qo'llab-quvvatlash va ma'qullashni anglatadi."</string>


    <string name="info1_1">Ilova haqida</string>
    <string name="info1_2">"Piyoda mobil ilovamiz 2010-yilda Dallas (AQSh) olimlari tomonidan 1960-2010 yillardagi statistik ma’lumotlar tahlili asosida yaratilgan, yurish paytida yoqilgan kaloriyalarni hisoblash formulasi asosida energiya sarfi va yoqilgan energiyani hisoblab chiqadi. Bir nechta savollarga javob berganingizdan so'ng siz quyidagi natijalarga erishasiz: \n-Kkal/min da o'lchanadigan energiya sarfi\n-Yuqilgan umumiy kaloriyalar\n-Yurish tezligi km/soatda\n-O'rtacha qadam uzunligi\n-Bosqichlar soni \n \n Ilovani ishlab chiqqan: \n__Toshkent pediatriya tibbiyot instituti Innovatsiya markazi.__\n\nJSST tavsiyalari asosida (JSSTning jismoniy faollik va harakatsiz xulq-atvor boʻyicha koʻrsatmalari: bir qarashda).Jeneva: Jahon sogʻliqni saqlash tashkiloti, 2020 yil. Litsenziya: CC BY-NC-SA 3.0 IGO.) hisob-kitob natijalariga ko'ra, harakatsiz turmush tarzining oldini olish bo'yicha tavsiyalar ko'rib chiqish uchun taklif etiladi."</string>


    <string name="draw1">Asosiy</string>
    <string name="draw2">Maqsadlar</string>
    <string name="draw3">Maslahatlar</string>
    <string name="draw4">Sozlamalar</string>
    <string name="draw5">Ilova haqida</string>
    <string name="draw6">Ulashish</string>
    <string name="draw7">Chiqish</string>


    <string name="stp1">Qadamlar soni</string>
    <string name="stp2">Kaloriya miqdori</string>
    <string name="stp3">Masofa (m)</string>
    <string name="stp4">"So`nggi maqsad"</string>
    <string name="stp5">"Maqsad"</string>

    <string name="uz">O`zbekcha</string>
    <string name="ru">Ruscha</string>


    <string name="inp1">Masofa qiymati kiritilmagan !</string>
    <string name="inp2">Kaloriya miqdori kiritilmagan!</string>
    <string name="inp3">Qadamlar soni kiritilmagan!</string>


</resources>