<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uz.catsi.pedometrdroid.ui.MainActivity">

    <item
        android:id="@+id/dictionary"
        android:icon="@drawable/main"
        android:title="@string/draw1"/>

    <item
        android:id="@+id/myStep"
        android:icon="@drawable/maqsad"
        android:title="@string/draw2"/>


    <item
        android:id="@+id/faq"
        android:icon="@drawable/advice"
        android:title="@string/draw3"/>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/draw4"/>


    <item
        android:id="@+id/about"
        android:icon="@drawable/about"
        android:title="@string/draw5"/>

    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:title="@string/draw6"/>



    <item
        android:id="@+id/exit_app"
        android:icon="@drawable/exit"
        android:title="@string/draw7"/>
</menu>