<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:id="@+id/inputView"
    tools:context=".ui.SettingsActivity">

    <ImageView
        android:id="@+id/btnBackMaqsad"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        app:tint="@color/white"
        android:background="?selectableItemBackgroundBorderless"/>

    <ImageView
        android:id="@+id/btnUpdate"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/update"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        app:tint="@color/white"
        android:background="?selectableItemBackgroundBorderless"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/draw2"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/txtTitle"/>

    <LinearLayout
        android:id="@+id/fieldInput"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="72dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stp1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="22dp"
                android:layout_gravity="start"/>

            <LinearLayout
                android:id="@+id/f1"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/blue_shape"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="10000"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:inputType="number"
                    android:id="@+id/inputStep"/>
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stp2"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="22dp"
                android:layout_gravity="start"/>

            <LinearLayout
                android:id="@+id/f2"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/blue_shape"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="8000"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:inputType="number"
                    android:id="@+id/inputCalory"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stp3"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="22dp"
                android:layout_gravity="start"/>

            <LinearLayout
                android:id="@+id/f3"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/blue_shape"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="10000"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:inputType="number"
                    android:id="@+id/inputDistance"/>
            </LinearLayout>


        </LinearLayout>




    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/blue_shape"
        android:id="@+id/f4"
        app:layout_constraintTop_toBottomOf="@id/fieldInput"
        android:layout_margin="22dp">

        <TextView
            android:id="@+id/txtfTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stp4"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/txtf1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stp1"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/txtfTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="12dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stp2"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/txtf1_1"
            android:id="@+id/txtf1_2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="12dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stp3"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/txtf1_2"
            android:id="@+id/txtf1_3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="12dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>